overhaul tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,10 @@
 # ~/.tmux.conf
 
+# Increase history
 set-option -g history-limit 10000
+
+# Improve colors
+set -g default-terminal 'xterm-256color'
 
 # Use ctrl-a as prefix
 unbind C-b
@@ -10,6 +14,9 @@ bind C-a send-prefix
 # Use prefix a to toggle windows
 unbind -T prefix l
 bind-key -T prefix          a       last-window
+
+# Sensible resizing
+setw -g aggressive-resize on
 
 # Sensible splitting
 unbind -T prefix '"'
@@ -23,18 +30,49 @@ bind -T prefix              r       run-shell "     tmux source-file ~/.tmux.con
 # Allow mouse
 set -g mouse on
 
-# System clipboard
-set -g set-clipboard off
-
 # Use 1-indexed windows
 set -g base-index 1
 setw -g pane-base-index 1
 
-# Alt pane switching
-bind -n M-Left  select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up    select-pane -U
-bind -n M-Down  select-pane -D
-
 # Longer message display time
 set-option -g display-time 2500
+
+# Sensible copying
+unbind -T prefix '['
+bind-key -T prefix v copy-mode
+set -g mode-keys vi
+set -g set-clipboard on
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "wl-copy"
+
+# Ameliorate vim mode switching delay (http://superuser.com/a/252717/65504)
+set -s escape-time 0
+
+# Simplify status bar display
+set -g status-style bg=default
+set -g status-interval 1
+set -g status-justify centre # center windows
+set -g status-left-length 20
+set -g status-right-length 140
+set -g status-left '#[fg=green,bright]#S#[fg=black] >> #[default]#[fg=green]#H@#(uname -r)#[default]'
+set -g status-right '#[fg=green]%H:%M:%S#[fg=black,bright] << #[fg=green]%Y-%m-%d'
+
+# default window title colors
+set-window-option -g window-status-style fg=green,bg=default
+
+# active window title colors
+set-window-option -g window-status-current-style fg=green,bg=black,bright
+
+# pane border
+set-option -g pane-active-border-style fg=white,dim
+set-option -g pane-border-style fg=black
+
+# message text
+set-option -g message-style bg=black,fg=green
+
+# pane number display
+set-option -g display-panes-active-colour cyan
+set-option -g display-panes-colour cyan
+
+# 
+set -g window-status-format "#[fg=black][#[fg=green]#I #W#[fg=black]]"
+set -g window-status-current-format " [#I #W] "
