--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,13 +24,15 @@ monitor = HDMI-0, 1920x1080@60,  1920x0, 1
 ### AUTOSTART ###
 #################
 
-exec-once = alacritty --daemon
+exec-once = alacritty --daemon -vv 2>&1 | tee /tmp/alacritty.log & disown
 exec-once = swww-daemon
-exec-once = pipewire-launcher.sh
+exec-once = sleep 3 && pipewire-launcher.sh
 exec-once = /usr/libexec/xdg-desktop-portal-hyprland
 exec-once = /usr/libexec/xdg-desktop-portal
+exec-once=dbus-update-activation-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
-exec-once = swww img ~/pics/wp/orangecommieblocks.png
+# exec-once = mpvpaper -v -p -o "--loop-file=inf --mute" '*' ~/vids/wp/emptyset.mp4
+exec-once = swww img ~/pics/wp/tokyo-skytree-golden-hour.png -t any --transition-fps 240 --transition-duration 2
 
 
 #############################
@@ -56,9 +58,9 @@ env = XDG_SESSION_DESKTOP,Hyprland
 
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 
-env = SWWW_TRANSITION,center
-env = SWWW_TRANSITION_DURATION,2
-env = SWWW_TRANSITION_FPS,240
+# env = SWWW_TRANSITION,center
+# env = SWWW_TRANSITION_DURATION,2
+# env = SWWW_TRANSITION_FPS,240
 
 
 ###################
@@ -89,11 +91,11 @@ general {
     gaps_in = 5
     gaps_out = 10
 
-    border_size = 3
+    border_size = 0
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(97adc2ff) rgba(f2a978ff) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = rgba(ffffffff) rgba(00000000) 45deg
+    col.inactive_border = rgba(44444444)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = true
@@ -110,11 +112,11 @@ decoration {
     rounding_power = 2
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 0.95
-    inactive_opacity = 0.85
+    active_opacity = 0.8
+    inactive_opacity = 0.65
 
     shadow {
-        enabled = true
+        enabled = false
         range = 36
         render_power = 3
         color = rgba(1a1a1a99)
@@ -123,7 +125,7 @@ decoration {
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 10
+        size = 14
         passes = 2
 
         vibrancy = 0.1696
@@ -145,9 +147,9 @@ animations {
 
     animation = global, 1, 10, default
     animation = border, 1, 5.39, easeOutExpo
-    animation = windows, 1, 4.79, easeOutExpo
-    animation = windowsIn, 1, 4.1, easeOutExpo, popin 87%
-    animation = windowsOut, 1, 1.49, easeOutExpo, popin 87%
+    animation = windows, 1, 2.4, easeOutExpo
+    animation = windowsIn, 1, 2.4, easeOutExpo, popin 87%
+    animation = windowsOut, 1, 1.2, easeOutExpo, popin 87%
     animation = fadeIn, 1, 1.73, almostLinear
     animation = fadeOut, 1, 1.46, almostLinear
     animation = fade, 1, 3.03, quick
@@ -156,9 +158,9 @@ animations {
     animation = layersOut, 1, 1.5, linear, fade
     animation = fadeLayersIn, 1, 1.79, almostLinear
     animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
+    animation = workspaces, 1, 2.4, easeOutExpo, slide
+    animation = workspacesIn, 1, 2.4, easeOutExpo, slide
+    animation = workspacesOut, 1, 2.40, easeOutExpo, slide
 }
 
 # Ref https://wiki.hypr.land/Configuring/Workspace-Rules/
@@ -205,6 +207,7 @@ input {
     repeat_rate = 50
 
     follow_mouse = 1
+    accel_profile = flat
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
@@ -216,10 +219,10 @@ input {
 
 # Example per-device config
 # See https://wiki.hypr.land/Configuring/Keywords/#per-device-input-configs for more
-# device {
-#     name = epic-mouse-v1
-#     sensitivity = -0.5
-# }
+device {
+    name = turtle-beach-burst-ii-pro-dongle-1
+    sensitivity = -0.15
+}
 
 
 ###################
@@ -233,7 +236,7 @@ bind = SUPER, F, fullscreen
 bind = SUPER, Return,       exec, alacritty msg create-window
 bind = SUPER, W,            exec, floorp -P Main
 bind = SUPER SHIFT, W,      exec, floorp -P School
-bind = SUPER, V,            exec, flatpak run dev.vencord.Vesktop
+bind = SUPER, V,            exec, ~/dls/vesktop-1.6.1/vesktop
 bind = SUPER SHIFT, Return, exec, st
 bind = SUPER, R,            exec, st # TODO: Menu
 bind = SUPER, Escape,       exec, hyprlock
@@ -248,6 +251,7 @@ bind = SUPER, O,            exec, ~/.config/tuun/mpv.sh o
 bind = SUPER, M,            exec, ~/.config/tuun/mpv.sh m
 bind = SUPER, Comma,        exec, ~/.config/tuun/mpv.sh b
 bind = SUPER, Period,       exec, ~/.config/tuun/mpv.sh f
+bind = SUPER ALT, T,       exec, hyprctl keyword 'device[synps/2-synaptics-touchpad]:enabled' 'false'
 
 # Screenshots
 layerrule = noanim, ^(selection)$
@@ -258,7 +262,7 @@ bind = SUPER SHIFT, Home,   exec, grim -o $(hyprctl activeworkspace | grep -o 'm
 bind = SUPER, Q,            killactive,
 bind = SUPER, Space,        togglefloating,
 bind = SUPER CTRL SHIFT, E, exit,
-bind = Super, C,            centerwindow,
+bind = SUPER, C,            centerwindow,
 
 # Move focus
 bind = SUPER, left,         movefocus, l
