fix(hypr): tweak monitor config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,8 +16,8 @@ debug:disable_logs = false
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor = eDP-1,  1920x1080@300, 0x0,    1
-monitor = HDMI-0, 1920x1080@60,  1920x0, 1
+monitor = eDP-1,    1920x1080@300, 1440x0,    1
+monitor = HDMI-A-1, 1440x900@60,   0x0, 1
 
 
 #################
